--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <h2>J.Abbate</h2>
         
    
-    <img src="img/jabbate_mmp100_final_switzerland_page1.jpg"  width="500" height="600"/>
+    <img src="img/jabbate_mmp100_final_switzerland_page1.JPG"  width="500" height="600"/>
        
               <div class="row">
   <div class="column">
